# pydantic-sqs

./: .gitignore  README.md  main.py  pyproject.toml
pydantic_sqs/: abstract.py  model.py  queue.py
test/: conftest.py  test_pydantic_SQSModel.py  test_pydantic_SQSQueue.py  test_sqs.py
