[project]
name = "pydantic-sqs"
version = "0.1.0"
description = ""
authors = [
    {name = "amiyamandal",email = "amiya.mandal@greychaindesign.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore (>=2.18.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "msgpack (>=1.1.0,<2.0.0)",
    "boto3 (>=1.18.0,<2.0.0)",
    "moto[sqs] (>=5.1.1,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
